--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "src",
-        "lib/com/regex/lexical/analyzer"
+        "lib/com/regex/lexical/analyzer",
+        "lib/com/regex/Parser"
 ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
