Added State clas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "src",
         "lib/com/regex/lexical/analyzer",
         "lib/com/regex/Parser",
-        "lib/com/regex/Exceptions"
+        "lib/com/regex/Exceptions",
+        "lib/com/regex/Automaton",
+        "lib/com/regex"
 ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
