--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,31 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "c:/Users/romario/Documents/Regex Engine/lib/com/regex/lexical/analyzer",
-      "program": "c:/Users/romario/Documents/Regex Engine/lib/com/regex/lexical/analyzer/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
         {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
+                "type": "java",
+                "name": "RegexEngine",
+                "request": "launch",
+                "mainClass": "RegexEngine",
+                "projectName": "Regex Engine_97fcf679"
+        },
+        {
+                "name": "C/C++ Runner: Debug Session",
+                "type": "cppdbg",
+                "request": "launch",
+                "args": [],
+                "stopAtEntry": false,
+                "externalConsole": true,
+                "cwd": "c:/Users/romario/Documents/Regex Engine/lib/com/regex/lexical/analyzer",
+                "program": "c:/Users/romario/Documents/Regex Engine/lib/com/regex/lexical/analyzer/build/Debug/outDebug",
+                "MIMode": "gdb",
+                "miDebuggerPath": "gdb",
+                "setupCommands": [
+                        {
+                                "description": "Enable pretty-printing for gdb",
+                                "text": "-enable-pretty-printing",
+                                "ignoreFailures": true
+                        }
+                ]
         }
-      ]
-    }
-  ]
+]
 }
